--- a/client.html
+++ b/client.html
@@ -306,13 +306,221 @@
         min-height: 60px;
         resize: vertical;
       }
+
+      /* ASR Section Styles */
+      .section-divider {
+        border-top: 3px solid #e2e8f0;
+        margin: 0;
+        background: linear-gradient(90deg, #4f46e5 0%, #7c3aed 50%, #4f46e5 100%);
+        height: 3px;
+        border: none;
+      }
+
+      .asr-section {
+        background: #f8fafc;
+        padding: 20px;
+        border-bottom: 1px solid #e2e8f0;
+      }
+
+      .section-title {
+        font-size: 1.2rem;
+        font-weight: 700;
+        color: #374151;
+        margin-bottom: 15px;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+
+      .file-upload-area {
+        border: 2px dashed #d1d5db;
+        border-radius: 8px;
+        padding: 20px;
+        text-align: center;
+        background: white;
+        transition: border-color 0.2s;
+        margin-bottom: 15px;
+      }
+
+      .file-upload-area:hover {
+        border-color: #4f46e5;
+      }
+
+      .file-upload-area.dragover {
+        border-color: #4f46e5;
+        background: #f0f4ff;
+      }
+
+      .file-input {
+        display: none;
+      }
+
+      .file-upload-label {
+        cursor: pointer;
+        font-weight: 600;
+        color: #4f46e5;
+      }
+
+      .file-list {
+        margin-top: 15px;
+      }
+
+      .file-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+        background: white;
+        border: 1px solid #e2e8f0;
+        border-radius: 6px;
+        margin-bottom: 8px;
+      }
+
+      .file-info {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        flex: 1;
+      }
+
+      .file-name {
+        font-weight: 500;
+        color: #374151;
+      }
+
+      .file-size {
+        font-size: 0.8rem;
+        color: #64748b;
+      }
+
+      .remove-file {
+        background: #ef4444;
+        color: white;
+        border: none;
+        padding: 4px 8px;
+        border-radius: 4px;
+        font-size: 0.75rem;
+        cursor: pointer;
+      }
+
+      .remove-file:hover {
+        background: #dc2626;
+      }
+
+      .asr-results {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        gap: 15px;
+        margin-top: 20px;
+      }
+
+      .transcription-card {
+        background: white;
+        border: 2px solid #e2e8f0;
+        border-radius: 8px;
+        overflow: hidden;
+        transition: all 0.2s;
+      }
+
+      .transcription-card.processing {
+        border-color: #f59e0b;
+        box-shadow: 0 4px 20px rgba(245, 158, 11, 0.1);
+      }
+
+      .transcription-card.completed {
+        border-color: #10b981;
+      }
+
+      .transcription-card.error {
+        border-color: #ef4444;
+      }
+
+      .transcription-header {
+        padding: 12px 15px;
+        background: #f8fafc;
+        border-bottom: 1px solid #e2e8f0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .transcription-filename {
+        font-weight: 600;
+        color: #374151;
+        font-size: 0.9rem;
+        max-width: 200px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
+      .transcription-status {
+        padding: 4px 8px;
+        border-radius: 4px;
+        font-size: 0.75rem;
+        font-weight: 600;
+        text-transform: uppercase;
+      }
+
+      .status-uploading {
+        background: #fef3c7;
+        color: #92400e;
+      }
+
+      .status-processing {
+        background: #fef3c7;
+        color: #92400e;
+      }
+
+      .transcription-content {
+        padding: 15px;
+        min-height: 80px;
+        max-height: 200px;
+        overflow-y: auto;
+        font-size: 0.9rem;
+        line-height: 1.5;
+        color: #1f2937;
+      }
+
+      .transcription-placeholder {
+        color: #64748b;
+        font-style: italic;
+      }
+
+      .transcription-metrics {
+        padding: 8px 15px;
+        font-size: 0.75rem;
+        color: #64748b;
+        background: #f9fafb;
+        border-top: 1px solid #e2e8f0;
+      }
+
+      .audio-player {
+        margin-bottom: 12px;
+        padding: 10px;
+        background: #f8fafc;
+        border-radius: 6px;
+        border: 1px solid #e2e8f0;
+      }
+
+      .audio-label {
+        font-size: 0.8rem;
+        color: #374151;
+        font-weight: 500;
+        margin-bottom: 5px;
+      }
+
+      audio {
+        width: 100%;
+        height: 32px;
+      }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="header">
         <h1>Biraj's LLM Server Test ft. Gemma 3 270M (running on MacBook M3 Pro)</h1>
-        <p>Test concurrent streaming requests and analyze Time to First Token performance</p>
+        <p>Test concurrent streaming requests and analyze Time to First Token performance + ASR transcription</p>
       </div>
 
       <div class="controls">
@@ -363,6 +571,44 @@ What is the capital of France?</textarea
         </div>
       </div>
 
+      <!-- ASR Section -->
+      <hr class="section-divider" />
+
+      <div class="asr-section">
+        <div class="section-title">🎤 Audio Speech Recognition (ASR) Testing</div>
+
+        <div class="control-group">
+          <div class="control-item">
+            <label for="transcribeUrl">Transcribe Endpoint URL:</label>
+            <input
+              type="url"
+              id="transcribeUrl"
+              value="http://localhost:8000/transcribe"
+              placeholder="http://localhost:8000/transcribe"
+            />
+          </div>
+        </div>
+
+        <div class="file-upload-area" id="fileUploadArea">
+          <div>
+            <label for="audioFiles" class="file-upload-label"> 📁 Click to select WAV files or drag & drop here </label>
+            <input type="file" id="audioFiles" class="file-input" multiple accept=".wav,audio/wav" />
+          </div>
+          <p style="margin-top: 8px; color: #64748b; font-size: 0.85rem">
+            Supports multiple WAV files for batch transcription
+          </p>
+        </div>
+
+        <div class="file-list" id="fileList"></div>
+
+        <div class="control-group" style="margin-top: 15px">
+          <button class="btn" id="transcribeBtn" disabled>Start Transcription</button>
+          <button class="btn btn-clear" id="clearAudioFiles">Clear Files</button>
+        </div>
+
+        <div class="asr-results" id="asrResults"></div>
+      </div>
+
       <div class="metrics">
         <div class="metric-card">
           <div class="metric-value" id="avgTtft">-</div>
@@ -405,12 +651,15 @@ What is the capital of France?</textarea
         constructor() {
           this.requests = [];
           this.activeConnections = 0;
+          this.audioFiles = [];
+          this.transcriptions = [];
           this.init();
         }
 
         init() {
           this.bindEvents();
           this.setupGrid();
+          this.setupASR();
         }
 
         bindEvents() {
@@ -419,6 +668,17 @@ What is the capital of France?</textarea
           document
             .getElementById("promptType")
             .addEventListener("change", (e) => this.toggleCustomPrompt(e.target.value));
+
+          // ASR event listeners
+          document.getElementById("audioFiles").addEventListener("change", (e) => this.handleFileSelect(e));
+          document.getElementById("transcribeBtn").addEventListener("click", () => this.startTranscription());
+          document.getElementById("clearAudioFiles").addEventListener("click", () => this.clearAudioFiles());
+
+          // Drag and drop
+          const uploadArea = document.getElementById("fileUploadArea");
+          uploadArea.addEventListener("dragover", (e) => this.handleDragOver(e));
+          uploadArea.addEventListener("dragleave", (e) => this.handleDragLeave(e));
+          uploadArea.addEventListener("drop", (e) => this.handleDrop(e));
         }
 
         toggleCustomPrompt(value) {
@@ -673,11 +933,304 @@ What is the capital of France?</textarea
           div.textContent = text;
           return div.innerHTML;
         }
+
+        // ASR Methods
+        setupASR() {
+          this.updateTranscribeButton();
+        }
+
+        handleFileSelect(event) {
+          const files = Array.from(event.target.files);
+          this.addFiles(files);
+        }
+
+        handleDragOver(event) {
+          event.preventDefault();
+          event.stopPropagation();
+          event.currentTarget.classList.add("dragover");
+        }
+
+        handleDragLeave(event) {
+          event.preventDefault();
+          event.stopPropagation();
+          event.currentTarget.classList.remove("dragover");
+        }
+
+        handleDrop(event) {
+          event.preventDefault();
+          event.stopPropagation();
+          event.currentTarget.classList.remove("dragover");
+
+          const files = Array.from(event.dataTransfer.files).filter(
+            (file) => file.type === "audio/wav" || file.name.toLowerCase().endsWith(".wav")
+          );
+          this.addFiles(files);
+        }
+
+        addFiles(files) {
+          for (const file of files) {
+            if (file.type === "audio/wav" || file.name.toLowerCase().endsWith(".wav")) {
+              const fileId = `file_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;
+              this.audioFiles.push({ id: fileId, file: file });
+            }
+          }
+          this.updateFileList();
+          this.updateTranscribeButton();
+        }
+
+        removeFile(fileId) {
+          this.audioFiles = this.audioFiles.filter((f) => f.id !== fileId);
+          this.updateFileList();
+          this.updateTranscribeButton();
+        }
+
+        clearAudioFiles() {
+          // Clean up audio URLs to prevent memory leaks
+          this.audioFiles.forEach((fileObj) => {
+            if (fileObj.audioUrl) {
+              URL.revokeObjectURL(fileObj.audioUrl);
+            }
+          });
+
+          this.audioFiles = [];
+          this.transcriptions = [];
+          this.updateFileList();
+          this.updateTranscribeButton();
+          document.getElementById("asrResults").innerHTML = "";
+          document.getElementById("audioFiles").value = "";
+        }
+
+        updateFileList() {
+          const fileList = document.getElementById("fileList");
+
+          if (this.audioFiles.length === 0) {
+            fileList.innerHTML = "";
+            return;
+          }
+
+          fileList.innerHTML = this.audioFiles
+            .map(
+              ({ id, file }) => `
+            <div class="file-item">
+              <div class="file-info">
+                <div class="file-name">${this.escapeHtml(file.name)}</div>
+                <div class="file-size">${this.formatFileSize(file.size)}</div>
+              </div>
+              <button class="remove-file" onclick="analyzer.removeFile('${id}')">Remove</button>
+            </div>
+          `
+            )
+            .join("");
+        }
+
+        updateTranscribeButton() {
+          const btn = document.getElementById("transcribeBtn");
+          btn.disabled = this.audioFiles.length === 0;
+          btn.textContent =
+            this.audioFiles.length === 0
+              ? "Start Transcription"
+              : `Transcribe ${this.audioFiles.length} file${this.audioFiles.length > 1 ? "s" : ""}`;
+        }
+
+        formatFileSize(bytes) {
+          if (bytes === 0) return "0 Bytes";
+          const k = 1024;
+          const sizes = ["Bytes", "KB", "MB", "GB"];
+          const i = Math.floor(Math.log(bytes) / Math.log(k));
+          return parseFloat((bytes / Math.pow(k, i)).toFixed(2)) + " " + sizes[i];
+        }
+
+        async startTranscription() {
+          if (this.audioFiles.length === 0) return;
+
+          const transcribeBtn = document.getElementById("transcribeBtn");
+          transcribeBtn.disabled = true;
+          transcribeBtn.textContent = "Transcribing...";
+
+          this.transcriptions = [];
+          this.createTranscriptionCards();
+
+          const promises = this.audioFiles.map((fileObj, index) => this.transcribeFile(fileObj, index));
+
+          try {
+            await Promise.allSettled(promises);
+          } finally {
+            transcribeBtn.disabled = false;
+            this.updateTranscribeButton();
+          }
+        }
+
+        createTranscriptionCards() {
+          const resultsDiv = document.getElementById("asrResults");
+          resultsDiv.innerHTML = this.audioFiles
+            .map(
+              (fileObj, index) => `
+            <div class="transcription-card" id="transcription-${index}">
+              <div class="transcription-header">
+                <div class="transcription-filename">${this.escapeHtml(fileObj.file.name)}</div>
+                <div class="transcription-status status-uploading">Uploading</div>
+              </div>
+              <div class="transcription-metrics" id="transcription-metrics-${index}">
+                Response Time: - | File Size: ${this.formatFileSize(fileObj.file.size)}
+              </div>
+              <div class="transcription-content" id="transcription-content-${index}">
+                <div class="audio-player">
+                  <div class="audio-label">🔊 Original Audio:</div>
+                  <audio controls id="audio-${index}">
+                    Your browser does not support the audio element.
+                  </audio>
+                </div>
+                <div class="transcription-placeholder">Preparing to upload...</div>
+              </div>
+            </div>
+          `
+            )
+            .join("");
+
+          // Set up audio sources
+          this.audioFiles.forEach((fileObj, index) => {
+            const audioElement = document.getElementById(`audio-${index}`);
+            const audioUrl = URL.createObjectURL(fileObj.file);
+            audioElement.src = audioUrl;
+
+            // Store the URL for cleanup later
+            fileObj.audioUrl = audioUrl;
+          });
+        }
+
+        async transcribeFile(fileObj, index) {
+          const transcribeUrl = document.getElementById("transcribeUrl").value;
+          const card = document.getElementById(`transcription-${index}`);
+          const statusSpan = card.querySelector(".transcription-status");
+          const contentDiv = document.getElementById(`transcription-content-${index}`);
+          const metricsDiv = document.getElementById(`transcription-metrics-${index}`);
+
+          const startTime = Date.now();
+
+          try {
+            // Update status to processing
+            statusSpan.className = "transcription-status status-processing";
+            statusSpan.textContent = "Processing";
+            card.classList.add("processing");
+
+            // Recreate the audio player and add processing message
+            contentDiv.innerHTML = `
+              <div class="audio-player">
+                <div class="audio-label">🔊 Original Audio:</div>
+                <audio controls id="audio-${index}">
+                  Your browser does not support the audio element.
+                </audio>
+              </div>
+              <div class="transcription-placeholder">Processing audio...</div>
+            `;
+
+            // Restore audio source
+            const audioElement = document.getElementById(`audio-${index}`);
+            audioElement.src = fileObj.audioUrl;
+
+            // Create FormData for multipart upload
+            const formData = new FormData();
+            formData.append("file", fileObj.file);
+
+            const response = await fetch(transcribeUrl, {
+              method: "POST",
+              body: formData,
+            });
+
+            if (!response.ok) {
+              throw new Error(`HTTP ${response.status}: ${response.statusText}`);
+            }
+
+            const result = await response.json();
+            const transcription = result.transcription || "No transcription received";
+
+            const endTime = Date.now();
+            const responseTime = endTime - startTime;
+
+            // Update UI with success
+            statusSpan.className = "transcription-status status-completed";
+            statusSpan.textContent = "Completed";
+            card.classList.remove("processing");
+            card.classList.add("completed");
+
+            // Update metrics
+            metricsDiv.textContent = `Response Time: ${responseTime}ms | File Size: ${this.formatFileSize(
+              fileObj.file.size
+            )}`;
+
+            // Update content with audio player and transcription
+            contentDiv.innerHTML = `
+              <div class="audio-player">
+                <div class="audio-label">🔊 Original Audio:</div>
+                <audio controls id="audio-${index}">
+                  Your browser does not support the audio element.
+                </audio>
+              </div>
+              <div style="margin-top: 10px; padding-top: 10px; border-top: 1px solid #e2e8f0;">
+                <strong>Transcription:</strong><br>
+                ${this.escapeHtml(transcription)}
+              </div>
+            `;
+
+            // Restore audio source again
+            const finalAudioElement = document.getElementById(`audio-${index}`);
+            finalAudioElement.src = fileObj.audioUrl;
+
+            this.transcriptions[index] = {
+              filename: fileObj.file.name,
+              transcription: transcription,
+              responseTime: responseTime,
+              status: "completed",
+            };
+          } catch (error) {
+            console.error(`Transcription failed for ${fileObj.file.name}:`, error);
+
+            const endTime = Date.now();
+            const responseTime = endTime - startTime;
+
+            // Update UI with error
+            statusSpan.className = "transcription-status status-error";
+            statusSpan.textContent = "Error";
+            card.classList.remove("processing");
+            card.classList.add("error");
+
+            // Update metrics even on error
+            metricsDiv.textContent = `Response Time: ${responseTime}ms | File Size: ${this.formatFileSize(
+              fileObj.file.size
+            )}`;
+
+            // Update content with audio player and error
+            contentDiv.innerHTML = `
+              <div class="audio-player">
+                <div class="audio-label">🔊 Original Audio:</div>
+                <audio controls id="audio-${index}">
+                  Your browser does not support the audio element.
+                </audio>
+              </div>
+              <div style="margin-top: 10px; padding-top: 10px; border-top: 1px solid #e2e8f0;">
+                <span class="error-message">Error: ${error.message}</span>
+              </div>
+            `;
+
+            // Restore audio source
+            const errorAudioElement = document.getElementById(`audio-${index}`);
+            errorAudioElement.src = fileObj.audioUrl;
+
+            this.transcriptions[index] = {
+              filename: fileObj.file.name,
+              transcription: null,
+              responseTime: responseTime,
+              status: "error",
+              error: error.message,
+            };
+          }
+        }
       }
 
       // Initialize the analyzer when the page loads
+      let analyzer;
       document.addEventListener("DOMContentLoaded", () => {
-        new TTFTAnalyzer();
+        analyzer = new TTFTAnalyzer();
       });
     </script>
   </body>
